--- a/app/src/main/assets/histograms.html
+++ b/app/src/main/assets/histograms.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-  <title>Google Charts Tutorial</title>
+  <title>Dream App</title>
   <script type="text/javascript" src="./loader.js">
   </script>
   <script type="text/javascript">
@@ -22,7 +22,7 @@
       ]);
 
       var options = {
-        title: 'Pre-evaluation vs Post-evaluation'
+        title: 'Pre-Evaluation vs Post-Evaluation'
       };
 
       // Instantiate and draw the chart.
