--- a/app/src/main/assets/piechart.html
+++ b/app/src/main/assets/piechart.html
@@ -15,7 +15,7 @@
       ]);
 
       var options = {
-        title: 'Attendance today'
+        title: 'Attendance Today'
       };
 
       var chart = new google.visualization.PieChart(document.getElementById('piechart'));
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-  <div id="piechart" style="width: 135px; height: 135px;"></div>
+  <div id="piechart" style="width: 135px; height: 135px; margin:0 auto;"></div>
 </body>
 
 </html>
