--- a/app/src/main/assets/piechart.html
+++ b/app/src/main/assets/piechart.html
@@ -15,7 +15,7 @@
       ]);
 
       var options = {
-        title: 'Attendance today'
+        title: 'Attendance Today'
       };
 
       var chart = new google.visualization.PieChart(document.getElementById('piechart'));
